src_old/objects/ProjectTypeAttributeSetting__c.object
<CustomObject>
    <fields>
        <fullName>AttributeName__c</fullName>
        <formula>ProjectTypeAttribute__r.AttributeName__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AttributeName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsReadOnly__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Read Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ProjectStatus__c</fullName>
        <label>Project Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Planning</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Booked</fullName>
                </value>
                <value>
                    <fullName>Launched</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Ended</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>Canceled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ProjectTypeAttribute__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Type Attribute</label>
        <referenceTo>ProjectTypeAttribute__c</referenceTo>
        <relationshipLabel>ProjectTypeAttributeSettings</relationshipLabel>
        <relationshipName>ProjectTypeAttributeSettings</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Project Type Attribute Setting</label>
    <nameField>
        <displayFormat>PTAS-{0000}</displayFormat>
        <label>Project Type Attribute Setting Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ProjectTypeAttributeSettings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>